--- a/html/css/style.css
+++ b/html/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Courier New', 'Consolas', 'Monaco', monospace;
     overflow: hidden;
     background: transparent;
     color: #ECECEC;
